Corrected some instructions. Added the ability to stop program execution by pressing pause/break on the keyboard.

--- a/code/styles/style.css
+++ b/code/styles/style.css
@@ -124,6 +124,8 @@ textarea
 
 #texteditor
 {
+	height: 100%;
+	overflow: auto;
 	grid-column: 2;
 	border: 0;
 	margin: 0;
